# fcitx5-lotus-osk

./: CMakeLists.txt  README.md  app.lotus.Osk.service.in  fcitx5-lotus-osk.desktop
src/: lotus-key-command.h  main.cpp  osk_controller.cpp  osk_controller.h  osk_theme.h  osk_window.cpp  osk_window.h
